syntax = "proto3";
package githubpb;

import "google/api/annotations.proto";

message GithubPushWebhookRequest {
    string ref = 1;
    string head = 2;
    string before = 3;
    int32 size = 4;
    int32 distinct_size = 5; 
    repeated GithubCommits commits = 6;
}

message GithubCommits {
    string id = 1;
    string tree_id = 2;
    bool distinct = 3;
    string message = 4;
    string timestamp =5;
    string url = 6;
}

message CommonResponse{
    string message  = 1;
    int32 code = 2;
}


service GithubWebhookServices {
    rpc FetchGithubPushCommitInfo (GithubPushWebhookRequest) returns (CommonResponse){
        option (google.api.http) = {
            post: "/v1/github/push"
            body:"*"
		};
    }
}